# react-wasm-rust

./: .gitignore  .i18nrc.js  Cargo.toml  README.md  auto-import.d.ts  netlify.toml  package.json  temp.json
config/: config.ts  routes.ts
script/: locale-config.json  locale-extract.ts  locale-init.ts  locale-remove.ts
src/: app.tsx  loading.tsx
src/components/: index.ts
src/components/Tools/: devTool.tsx
src/hooks/: useWasm.ts
src/layouts/: index.tsx
src/locales/: base.json  en-US.json  km-KH.json  zh-CN.json
src/locales-base/: en-US.json  extra-km.ts
src/locales/translation/: _all.ts
src/pages/auth/login/: index.tsx
src/pages/welcome/: index.tsx
src/types/: global.d.ts
src/utils/: index.ts  locale.ts
src/wasm/: lib.rs  utils.rs
wasm-lib/: Cargo.toml  README.md
wasm-lib/src/: lib.rs
