
[package]
name = "wasm-lib"
version = "0.1.1"
edition = "2021"
description = "wasm-lib"

[lib]
crate-type = ["cdylib"]
path = "src/wasm/lib.rs"

[dependencies]
js-sys = "0.3.69"
serde = "1.0.201"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
wasm-bindgen = "0.2.78"

# https://github.com/Badel2/wasm-bindgen-file-reader
wasm-bindgen-file-reader = "1"

web-sys = { version = "0.3.69", features = [
         'console',
         'CssStyleDeclaration',
         'Document',
         'DomStringMap',
         'DomTokenList',
         'Element',
         'Event',
         'EventTarget',
         'HtmlBodyElement',
         'HtmlElement',
         'HtmlInputElement',
         'KeyboardEvent',
         'Location',
         'Node',
         'NodeList',
         'Storage',
         'Window',
] }
