
[package]
name = "wasm-lib"
version = "0.1.1"
edition = "2021"
description = "wasm-lib"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.69", features = [
         "Window",
         "Document",
         "HtmlElement",
         "Node",
         "Text",
] }
